# report-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  init-letsencrypt.sh  pull_new_image.sh  pyproject.toml
.github/workflows/: deploy_on_prod.yaml
backend/: constants.py  exceptions.py  filters.py  utils.py
backend/backend/: settings.py  urls.py
backend/bot/: crud.py  email_receive.py  file_param.py  file_parse.py  google_sheet_backend.py  models.py  utils.py
backend/bot/constants/: constants.py  exceptions.py  keyboards.py  roles.py  states.py
backend/bot/handlers/: main_handlers.py  notifications.py  report_generator.py  schedule.py  start.py  stuff.py
backend/core/: admin.py  apps.py  constants.py  crud.py  filters.py  forms.py  make_pdf.py  models.py  urls.py  utils.py  validators.py  views.py
backend/core/migrations/: 0001_initial.py  0002_employee_phone_alter_schedule_time.py  0003_alter_schedule_time.py  0004_alter_schedule_options_alter_schedule_time.py  0005_alter_schedule_time.py  0006_employee_is_manager.py
backend/core/templates/: change_list.html  confirm.html  employee_list.html
backend/files/: default.conf  requirements.txt
backend/report/: admin.py  apps.py  constants.py  file_parse.py  filters.py  forms.py  models.py
backend/salary/: admin.py  apps.py  constants.py  crud.py  file_parse.py  filters.py  forms.py  make_pdf.py  models.py  serializers.py
backend/stock/: admin.py  apps.py  models.py
backend/templates/: change_list.html  confirm.html  confirm_with_form.html  load_file.html
examples/: administrator_db.xlsx  bot_settings.xlsx  dot_env  employees_example.json  pattern_example.docx
files/: requirements.txt
src/: config.py  email_receive.py  exceptions.py  file_creator.py  file_param.py  file_parse.py  google_sheet_backend.py  handlers.py  main.py  models.py  services.py  utils.py
src/constants/: constants.py  exceptions.py  keyboards.py  roles.py  states.py
src/handlers/: main_handlers.py  notifications.py  report_generator.py  schedule.py  stuff.py
(+15 files in other folders)
