[tool.poetry]
name = "report-generator"
version = "0.1.0"
description = ""
authors = ["vlad <vladislav.grachev@gmail.com>"]
readme = "README.md"
packages = [{include = "report_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.111.0"
borb = "^2.1.20"
pydantic = "^2.5.3"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
